# ufsatm

./: .gitignore  .gitmodules  CMakeLists.txt  atmos_model.F90  ufsatm_cap.F90
.github/workflows/: GCC.yml  docs.yml
ccpp/: CCPP_driver.F90  CMakeLists.txt
ccpp/config/: ccpp_prebuild_config.py  ccpp_prebuild_config_fv3.py  ccpp_prebuild_config_mpas.py
ccpp/data/: CCPP_typedefs.F90  GFS_typedefs.F90
ccpp/driver/: GFS_diagnostics.F90  GFS_init.F90  GFS_restart.F90  MPAS_init.F90
ccpp/suites/: suite_FV3_GFS_v15_thompson_mynn_lam3km.xml  suite_FV3_GFS_v15p2.xml  suite_FV3_GFS_v16.xml  suite_FV3_GFS_v16_csawmg.xml  suite_FV3_GFS_v16_flake.xml  suite_FV3_GFS_v16_fv3wam.xml  suite_FV3_GFS_v16_gfdlmpv3.xml  suite_FV3_GFS_v16_ras.xml  suite_FV3_GFS_v17_coupled_p8.xml  suite_FV3_GFS_v17_coupled_p8_c3.xml  suite_FV3_GFS_v17_coupled_p8_sfcocn.xml  suite_FV3_GFS_v17_coupled_p8_ugwpv1.xml  suite_FV3_GFS_v17_p8.xml  suite_FV3_GFS_v17_p8_c3.xml  suite_FV3_GFS_v17_p8_mynn.xml  suite_FV3_GFS_v17_p8_rrtmgp.xml  suite_FV3_GFS_v17_p8_ugwpv1.xml  suite_FV3_GFS_v17_p8_ugwpv1_tempo.xml  suite_FV3_HAFS_v1_gfdlmp_tedmf.xml  suite_FV3_HAFS_v1_gfdlmp_tedmf_nonsst.xml  suite_FV3_HAFS_v1_gfdlmp_tedmf_ntiedtke.xml  suite_FV3_HAFS_v1_gfdlmpv3_tedmf.xml  suite_FV3_HAFS_v1_ntiedtke.xml  suite_FV3_HAFS_v1_thompson.xml  suite_FV3_HAFS_v1_thompson_nonsst.xml  suite_FV3_HAFS_v1_thompson_tedmf_gfdlsf.xml  suite_FV3_HAFS_v1_thompson_tedmf_gfdlsf_ntiedtke.xml  suite_FV3_HAFS_v2.xml  suite_FV3_HAFS_v2_coupled.xml  suite_FV3_HRRR.xml  suite_FV3_HRRR_c3.xml  suite_FV3_HRRR_gf.xml  suite_FV3_HRRR_gf_nogwd.xml  suite_FV3_RAP.xml  suite_FV3_RAP_cires_ugwp.xml  suite_FV3_RAP_clm_lake.xml  suite_FV3_RAP_flake.xml  suite_FV3_RAP_noah.xml  suite_FV3_RAP_noah_sfcdiff_cires_ugwp.xml  suite_FV3_RAP_sfcdiff.xml  (+17 more)
ci/: CMakeLists.txt  spack.yaml
cpl/: module_block_data.F90  module_cap_cpl.F90  module_cdeps_inline.F90  module_cplfields.F90  module_cplscalars.F90
docs/: Doxyfile.in
fv3/: atmos_model.F90  fv3_cap.F90  module_fcst_grid_comp.F90  module_fv3_config.F90
fv3/io/: fv3atm_restart_io.F90  module_write_netcdf.F90  module_wrt_grid_comp.F90  post_fv3.F90
fv3/moving_nest/: bounding_box.F90  fv_moving_nest.F90  fv_moving_nest_main.F90  fv_moving_nest_physics.F90  fv_moving_nest_types.F90  fv_moving_nest_utils.F90  (+1 more)
io/: fv3atm_clm_lake_io.F90  fv3atm_common_io.F90  fv3atm_history_io.F90  fv3atm_oro_io.F90  fv3atm_restart_io.F90  fv3atm_rrfs_sd_io.F90  fv3atm_sfc_io.F90  module_write_internal_state.F90  module_write_netcdf.F90  module_write_restart_netcdf.F90  module_wrt_grid_comp.F90  post_fv3.F90  post_nems_routines.F90
mpas/: CMakeLists.txt  atmos_coupling.F90  atmos_model.F90  module_fcst_grid_comp.F90  module_mpas_config.F90  ufs_mpas_boundaries.F90  ufs_mpas_constituents.F90  ufs_mpas_io.F90  ufs_mpas_module.F90  ufs_mpas_subdriver.F90  ufs_mpas_tools.F90
tests/: CMakeLists.txt  module_block_harness.F90  test_atmos_model.F90  test_copy2block.F90  test_fv3_cap.F90  test_merge_importfield.F90  test_module_wrt_grid_comp.F90  test_post_nems_routines.F90
(+1 files in other folders)
